@startuml engine_integration
skinparam style strictuml
skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0

skinparam class {
    BackgroundColor #F8FAFC
    BorderColor #64748B
    FontColor #0F172A
}

skinparam class<<abstract>> {
    BackgroundColor #FFF7ED
    BorderColor #C2410C
    FontColor #9A3412
}

skinparam class<<interface>> {
    BackgroundColor #ECFEFF
    BorderColor #0F766E
    FontColor #115E59
}

skinparam class<<enum>> {
    BackgroundColor #EEF2FF
    BorderColor #4338CA
    FontColor #312E81
}

package "game.integration" {
    class BattleSession #F8FAFC {
        -battle: Battle
        -scheduler: EventScheduler
        -hud: BattleHud
        -playerTrainer: Player
        -opponentTrainer: Trainer
        -playerPokemonObject: PlayerPokemonObject
        -otherPokemonObject: OtherPokemonObject
        -running: Boolean
        +start(battle: Battle, player: Player, opponent: Trainer) void
        +submitPlayerAction(action: CombatAction) void
        +update(deltaTime: Double) void
        +queueTurnPresentation(results: List<ActionResult>) void
        +syncVisualState() void
        +finish() void
    }

    class BattleHud #F8FAFC {
        -rootPanel: UiImage
        -playerHpBar: UiProgressBar
        -opponentHpBar: UiProgressBar
        -messageText: UiText
        -actionButtons: List<UiButton>
        -inputLocked: Boolean
        +buildHierarchy() void
        +bindBattle(battle: Battle) void
        +refresh() void
        +showMessage(message: String) void
        +setInputLocked(locked: Boolean) void
    }

    class PlayerPokemonObject #F8FAFC {
        -boundPokemon: Pokemon
        -animator: Animator
        -active: Boolean
        +bind(pokemon: Pokemon) void
        +syncFromBattle(context: BattleContext) void
        +playHitAnimation() void
        +playFaintAnimation() void
    }

    class OtherPokemonObject #F8FAFC {
        -boundPokemon: Pokemon
        -animator: Animator
        -active: Boolean
        +bind(pokemon: Pokemon) void
        +syncFromBattle(context: BattleContext) void
        +playHitAnimation() void
        +playFaintAnimation() void
    }

    class Npc #F8FAFC {
        -trainerData: NpcTrainer
        -interactionEnabled: Boolean
        +onInteract(player: Player) Battle
        +canStartBattle() Boolean
        +setDefeated() void
        +update() void
        +setup() void
    }
}

package "game.player" {
    class Player #F8FAFC {
        -worldTeam: Team
        -selectedAction: CombatAction
        -isInBattle: Boolean
        +selectAction(context: BattleContext) CombatAction
        +enterBattleSession() void
        +exitBattleSession() void
        +update() void
        +setup() void
    }
}

package "game.battle" {
    interface Trainer <<interface>> #ECFEFF
    class Battle #F8FAFC
    class BattleContext #F8FAFC
    class CombatAction #F8FAFC
    enum ActionResult <<enum>> #EEF2FF
    class Team #F8FAFC
    class NpcTrainer #F8FAFC
}

package "game.creature" {
    class Pokemon #F8FAFC
}

package "engine.core" {
    class GameObject #F8FAFC
    class GamePanel #F8FAFC
}

package "engine.events" {
    class EventScheduler #F8FAFC
}

package "engine.animation" {
    class Animator #F8FAFC
}

package "engine.ui.elements" {
    class UiImage #F8FAFC
    class UiText #F8FAFC
    class UiButton #F8FAFC
    class UiProgressBar #F8FAFC
}

Player --|> GameObject
Npc --|> GameObject
PlayerPokemonObject --|> GameObject
OtherPokemonObject --|> GameObject
BattleHud --|> UiImage

Trainer <|.. Player

BattleSession --> Battle
BattleSession --> EventScheduler
BattleSession --> BattleHud
BattleSession --> PlayerPokemonObject
BattleSession --> OtherPokemonObject
BattleSession --> Player
BattleSession --> Trainer
BattleSession ..> CombatAction
BattleSession ..> ActionResult

BattleHud --> UiProgressBar
BattleHud --> UiText
BattleHud --> UiButton
BattleHud ..> Battle

PlayerPokemonObject --> Animator
OtherPokemonObject --> Animator
PlayerPokemonObject --> Pokemon
OtherPokemonObject --> Pokemon
PlayerPokemonObject ..> BattleContext
OtherPokemonObject ..> BattleContext

Npc --> NpcTrainer
Npc --> Battle

BattleSession ..> GamePanel

note bottom of BattleSession
EventScheduler is a concrete instance owned by BattleSession.
No presenter/adapter/mapper micro-classes are required.
end note

note bottom of Npc
NPC interaction validation (distance/button/click)
happens in game object logic before creating battle.
end note

@enduml
